@@ -1,5 +1,10 @@
 2009-06-09  kitone  <kitone@gna.org>
 
+	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
+	Remove actions 'Set Subtitle Start' and 'Set Subtitle End' of the videoplayermanagement plugin.
+
+2009-06-09  kitone  <kitone@gna.org>
+
 	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
 	* plugins/subtitleformats/substationalpha/substationalpha.cc:
 	Make reading more robust to the files invalid. Fix bug #13656.
